fix(RepeatWord, SavedWord): fix white spacing in long translation words

--- a/src/components/Ricorda/components/SavedWords/components/SavedWord/SavedWord.css
+++ b/src/components/Ricorda/components/SavedWords/components/SavedWord/SavedWord.css
@@ -38,6 +38,7 @@
 .translation-word {
   width: 100%;
   text-align: center;
+  white-space: normal;
 }
 
 @media (min-width: 576px) {
