--- a/src/components/Ricorda/components/TodayWords/components/RepeatWord/RepeatWord.css
+++ b/src/components/Ricorda/components/TodayWords/components/RepeatWord/RepeatWord.css
@@ -64,6 +64,7 @@
 .translation-word {
   width: 100%;
   text-align: center;
+  white-space: normal;
 }
 
 .repeat-word-actions-block {
